change onclick buttons on menu and alerts of number of likes based on the number of produts working

--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -92,10 +92,10 @@
 
 			  		
 			  		<ul class="list">
-			  			<li onclick="addMoreRows('lista_produtos1','Água','2.00')" class="icones_bebidas">
+			  			<li  class="icones_bebidas">
 			  				<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Água','2.00')"/></td>
 			  						<td id="td_img"><img src="agua.png" id="img_menu"/></td>
 						  			<td class="name">Água</td>
 						  			<td class="type">sem alcool</td>
@@ -103,10 +103,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Coca-Cola','1.50')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Coca-Cola','1.50')"/></td>
 			  						<td id="td_img"><img src="coca-cola.png" id="img_menu"/></td>
 						  			<td class="name">Coca-Cola</td>
 						  			<td class="type">sem alcool</td>
@@ -114,10 +114,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Ice-Tea','1.50')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Ice-Tea','1.50')"/></td>
 			  						<td id="td_img"><img src="ice_tea.png" id="img_menu"/></td>
 						  			<td class="name">Ice Tea</td>
 						  			<td class="type">Sem alcool</td>
@@ -125,10 +125,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Café','1.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Café','1.00')"/></td>
 			  						<td id="td_img"><img src="cafe.png" id="img_menu"/></td>
 						  			<td class="name">Café</td>
 						  			<td class="type">Sem alcool</td>
@@ -136,10 +136,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Absinto','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Absinto','2.00')"/></td>
 			  						<td id="td_img"><img src="absinto.png" id="img_menu"/></td>
 						  			<td class="name">Absinto</td>
 						  			<td class="type">Com alcool</td>
@@ -147,10 +147,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vodka_Laranja','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Vodka_Laranja','2.00')"/></td>
 			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
 						  			<td class="name">Vodka Laranja</td>
 						  			<td class="type">Com alcool</td>
@@ -158,10 +158,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vodka_Limão','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Vodka_Limão','2.00')"/></td>
 			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
 						  			<td class="name">Vodka Limão</td>
 						  			<td class="type">Com alcool</td>
@@ -169,10 +169,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vodka_Cola','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Vodka_Cola','2.00')"/></td>
 			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
 						  			<td class="name">Vodka Cola</td>
 						  			<td class="type">Com alcool</td>
@@ -180,10 +180,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Rum','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Rum','2.00')"/></td>
 			  						<td id="td_img"><img src="rum.png" id="img_menu"/></td>
 						  			<td class="name">Rum</td>
 						  			<td class="type">Com alcool</td>
@@ -191,10 +191,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Somersby_de_Maçã','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Somersby_de_Maçã','2.00')"/></td>
 			  						<td id="td_img"><img src="somersby_m.png" id="img_menu"/></td>
 						  			<td class="name">Somersby de Maçã</td>
 						  			<td class="type">Com alcool</td>
@@ -202,10 +202,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Somersby_Frutos_Vermelhos','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Somersby_Frutos_Vermelhos','2.00')"/></td>
 			  						<td id="td_img"><img src="somersby_f.png" id="img_menu"/></td>
 						  			<td class="name">Somersby Frutos Vermelhos</td>
 						  			<td class="type">Com alcool</td>
@@ -213,10 +213,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Tequila','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Tequila','2.00')"/></td>
 			  						<td id="td_img"><img src="tequila.png" id="img_menu"/></td>
 						  			<td class="name">Tequila</td>
 						  			<td class="type">Com alcool</td>
@@ -224,10 +224,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Whisky','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Whisky','2.00')"/></td>
 			  						<td id="td_img"><img src="whisky.png" id="img_menu"/></td>
 						  			<td class="name">Whisky</td>
 						  			<td class="type">Com alcool</td>
@@ -235,10 +235,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Whisky_Cola','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Whisky_Cola','2.00')"/></td>
 			  						<td id="td_img"><img src="whisky_cola.png" id="img_menu"/></td>
 						  			<td class="name">Whisky Cola</td>
 						  			<td class="type">Com alcool</td>
@@ -246,10 +246,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vinho_Branco','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Vinho_Branco','2.00')"/></td>
 			  						<td id="td_img"><img src="vinho_branco.png" id="img_menu"/></td>
 						  			<td class="name">Vinho Branco</td>
 						  			<td class="type">Com alcool</td>
@@ -257,10 +257,10 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vinho_Tinto','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Vinho_Tinto','2.00')"/></td>
 			  						<td id="td_img"><img src="vinho_tinto.png" id="img_menu"/></td>
 						  			<td class="name">Vinho Tinto</td>
 						  			<td class="type">Com alcool</td>
@@ -283,10 +283,10 @@
 			  		</button>
 			  		
 			  		<ul class="list">
-			  			<li onclick="addMoreRows('lista_produtos1','Hamburger','6.00')" class="icones_bebidas">
+			  			<li  class="icones_bebidas">
 			  				<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Hamburger','6.00')"/></td>
 			  						<td id="td_img"><img src="sem_queijo.png" id="img_menu"/></td>
 						  			<td class="name">Hamburger</td>
 						  			<td class="price">6.00€</td>
@@ -294,10 +294,10 @@
 						  	</table>
 		  					<p class="description_1">Pão, carne de vaca, alface e tomate</p>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Cheeseburger','6.50')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Cheeseburger','6.50')"/></td>
 			  						<td id="td_img"><img src="com_queijo.png" id="img_menu"/></td>
 						  			<td class="name">Cheeseburger</td>
 						  			<td class="price">6.50€</td>
@@ -305,10 +305,10 @@
 						  	</table>
 				  			<p class="description">Pão, carne de vaca, queijo, alface e tomate</p>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Cachorro_Quente','4.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Cachorro_Quente','4.00')"/></td>
 			  						<td id="td_img"><img src="cachorro.png" id="img_menu"/></td>
 						  			<td class="name">Cachorro Quente</td>
 						  			<td class="price">4.00€</td>
@@ -316,10 +316,10 @@
 						  	</table>
 						  	<p class="description_1">Pão, salsicha e batata frita</p>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Bifana','4.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Bifana','4.00')"/></td>
 			  						<td id="td_img"><img src="bifana.png" id="img_menu"/></td>
 						  			<td class="name">Bifana</td>
 						  			<td class="price">4.00€</td>
@@ -327,10 +327,10 @@
 						  	</table>
 						  	<p class="description_1">Pão com carne de porco</p>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Torradas','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Torradas','2.00')"/></td>
 			  						<td id="td_img"><img src="torradas.png" id="img_menu"/></td>
 						  			<td class="name">Torradas</td>
 						  			<td class="price">2.00€</td>
@@ -338,10 +338,10 @@
 						  	</table>
 						  	<p class="description_1">Pão com manteiga</p>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Prego_no_Pão','4.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Prego_no_Pão','4.00')"/></td>
 			  						<td id="td_img"><img src="prego.png" id="img_menu"/></td>
 						  			<td class="name">Prego no Pão</td>
 						  			<td class="price">4.00€</td>
@@ -349,40 +349,40 @@
 						  	</table>
 						  	<p class="description_1">Pão com carne de vaca</p>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Amendoins','1.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Amendoins','1.00')"/></td>
 			  						<td id="td_img"><img src="amendoins.png" id="img_menu"/></td>
 						  			<td class="name">Amendoins</td>
 						  			<td class="price">1.00€</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Tremoços','1.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Tremoços','1.00')"/></td>
 			  						<td id="td_img"><img src="tremoços.png" id="img_menu"/></td>
 						  			<td class="name">Tremoços</td>
 						  			<td class="price">1.00€</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Lays_Originais','2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
+			  						<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Lays_Originais','2.00')"/></td>
 			  						<td id="td_img"><img src="lays.png" id="img_menu"/></td>
 						  			<td class="name">Batatas Lays Originais</td>
 						  			<td class="price">2.00€</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Tiras_de_Milho', '2.00')" class="icones_bebidas">
+				  		<li  class="icones_bebidas">
 				  			<table>
 				  				<tr>
-				  					<td id="add"><img src="add.png"/></td>
+				  					<td id="add"><img src="add.png" onclick="addMoreRows('lista_produtos1','Tiras_de_Milho', '2.00')"/></td>
 				  					<td id="td_img"><img src="tiras.png" id="img_menu"/></td>
 						  			<td class="name">Tiras de Milho</td>
 						  			<td class="price">2.00€</td>
