--- a/website/index.html
+++ b/website/index.html
@@ -126,7 +126,7 @@
 <a href="prototipo funcional 1 completo/index.html">Primeiro prot&oacute;tipo funcional completo</a> <br />
 <a href="prototipo funcional 2 beta/index.html">Segundo prot&oacute;tipo funcional</a> <br />
 <a href="prototipo funcional 2 completo/index.html">Segundo prot&oacute;tipo funcional completo</a><br />
-<a href="protFinal-beta.html">Prot&oacute;tipo Final</a> <br />
+<a href="prototipo final beta/index.html">Prot&oacute;tipo Final</a> <br />
 <a href="protFinal-completo.html">Prot&oacute;tipo Final completo</a><br />
 </div>
 </div>
