remove delete all storage in historico

--- a/website/prototipo final beta/historico.html
+++ b/website/prototipo final beta/historico.html
@@ -70,7 +70,7 @@
   		<p class="historicoTitulos">Todos os pedidos:</p>
   	</div>
 
-  	<div class="tabela" onclick="deleteAllStorage()" style="float:left;margin-left: 5%;">
+  	<div class="tabela" style="float:left;margin-left: 5%;">
       <table id="prodtab" align="center">
         <tr id="table_header">
           <th style="width: 15%">Qtd</th>
