--- a/website/prototipo final beta/historico.html
+++ b/website/prototipo final beta/historico.html
@@ -86,7 +86,7 @@
     </div>
 
     <!--inicio tabela historico-->
-    <div class="tabela" onclick="deleteAllStorage()">
+    <div class="tabela" >
       <table id="historicotab"  align="center">
         <tr id="table_header">
           <th style="width: 15%">Qtd</th>
