improve projeto final beta

--- a/Projeto/historico.html
+++ b/Projeto/historico.html
@@ -70,7 +70,7 @@
   		<p class="historicoTitulos">Todos os pedidos:</p>
   	</div>
 
-  	<div class="tabela" onclick="deleteAllStorage()" style="float:left;margin-left: 5%;">
+  	<div class="tabela" style="float:left;margin-left: 5%;">
       <table id="prodtab" align="center">
         <tr id="table_header">
           <th style="width: 15%">Qtd</th>
@@ -86,7 +86,7 @@
     </div>
 
     <!--inicio tabela historico-->
-    <div class="tabela" onclick="deleteAllStorage()">
+    <div class="tabela">
       <table id="historicotab"  align="center">
         <tr id="table_header">
           <th style="width: 15%">Qtd</th>
@@ -103,7 +103,7 @@
     <!--fim tabela historico-->
     <div style="display: flex;justify-content: space-between;">
     	<p style="margin-left: auto;margin-right: auto;"> </p>
-    	<p id="historico_par" onclick="listAllItems()">Total:</p>
+    	<p id="historico_par">Total:</p>
     </div>
 
     
