--- a/website/prototipo final beta/historico.html
+++ b/website/prototipo final beta/historico.html
@@ -86,7 +86,7 @@
     </div>
 
     <!--inicio tabela historico-->
-    <div class="tabela" >
+    <div class="tabela">
       <table id="historicotab"  align="center">
         <tr id="table_header">
           <th style="width: 15%">Qtd</th>
@@ -103,7 +103,7 @@
     <!--fim tabela historico-->
     <div style="display: flex;justify-content: space-between;">
     	<p style="margin-left: auto;margin-right: auto;"> </p>
-    	<p id="historico_par" onclick="listAllItems()">Total:</p>
+    	<p id="historico_par">Total:</p>
     </div>
 
     
