--- a/website/prototipo final beta/index.html
+++ b/website/prototipo final beta/index.html
@@ -83,8 +83,8 @@
 		    	</table>	
 		  	</div>
 		</a>
-  	  	<a href="pagamento.html">
-	  	  	<div class="icones" id="pagamento">
+  	  	<!--<a href="pagamento.html">-->
+	  	  	<div class="icones" id="pagamento" onclick="payment()">
 		  	  		<table>
 				  		<tr>
 				  			<td id="paga1"><b>Pagamento<b></td>
@@ -92,7 +92,7 @@
 				    	</tr>
 			    	</table>
 		  	</div>
-		</a> 
+		<!--</a>--> 
 	</div>
   	<!--fim ajuda/pagamento-->
 
