centered word Pagamento inside div

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -85,7 +85,7 @@
 		</a>
   	  	<!--<a href="pagamento.html">-->
 	  	  	<div class="icones" id="pagamento" onclick="payment()">
-		  	  		<table>
+		  	  		<table style="height: 100%;">
 				  		<tr>
 				  			<td id="paga1"><b>Pagamento<b></td>
 				  			<td><img class = "button_icone" src="pagamento.png"/></td>
