--- a/website/index.html
+++ b/website/index.html
@@ -127,7 +127,7 @@
 <a href="prototipo funcional 2 beta/index.html">Segundo prot&oacute;tipo funcional</a> <br />
 <a href="prototipo funcional 2 completo/index.html">Segundo prot&oacute;tipo funcional completo</a><br />
 <a href="prototipo final beta/index.html">Prot&oacute;tipo Final</a> <br />
-<a href="protFinal-completo.html">Prot&oacute;tipo Final completo</a><br />
+<a href="prototipo final completo/index.html">Prot&oacute;tipo Final completo</a><br />
 </div>
 </div>
 
