--- a/Projeto/historico.html
+++ b/Projeto/historico.html
@@ -102,7 +102,7 @@
     <div style="display: flex;justify-content: space-between;">
     	<div id="back1">
         <div class="icones" id="voltar">
-          <table id="repeatTable"  onclick="repeatLastOrder()">
+          <table id="repeatTable"  onclick="Confirm1.render('Tem a certeza que quer repetir último pedido?')">
             <tr>
               <td><img class = "button_icone" src="replay-arrow.png"/></td>
               <td id="voltar1"><b>Repetir último pedido</b></td>
@@ -113,6 +113,15 @@
     	<p id="historico_par">Total:</p>
     </div>
 
+    <!--popup windows-->
+    <div id="dialogoverlay"></div>
+    <div id="dialogbox">
+      <div>
+        <div id="dialogboxhead"></div>
+        <div id="dialogboxbody"></div>
+        <div id="dialogboxfoot"></div>
+      </div>
+    </div>
     
 
     <!--inicio da barra de musica no inferior-->
