--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -12,7 +12,7 @@
   <script src="jquery.js">></script> 
 
   </head>
-  <body onload="seeTime(); seePay(); barMusic();">
+  <body onload="seeTime(); seePay();">
 
   <!--para criar a barra fixa no topo-->
   	<div id="barra">
