--- a/website/prototipo final completo/index.html
+++ b/website/prototipo final completo/index.html
@@ -12,7 +12,7 @@
   <script src="jquery.js">></script> 
 
   </head>
-  <body onload="seeTime(); seePay(); barMusic();">
+  <body onload="seeTime(); seePay();">
 
   <!--para criar a barra fixa no topo-->
   	<div id="barra">
@@ -84,7 +84,7 @@
 		  	</div>
 		</a>
   	  	<!--<a href="pagamento.html">-->
-	  	  	<div class="icones" id="pagamento" onclick="payment()">
+	  	  	<div class="icones" id="pagamento" onclick="Confirm.render('Deseja efetuar o pagamento e sair do bar?','delete_post','post_1')">
 		  	  		<table style="height: 100%;">
 				  		<tr>
 				  			<td id="paga1"><b>Pagamento<b></td>
@@ -95,6 +95,17 @@
 		<!--</a>--> 
 	</div>
   	<!--fim ajuda/pagamento-->
+
+  	<div id="dialogoverlay"></div>
+	<div id="dialogbox">
+	  <div>
+	    <div id="dialogboxhead"></div>
+	    <div id="dialogboxbody"></div>
+	    <div id="dialogboxfoot"></div>
+	  </div>
+	</div>
+
+
 
   	<!--inicio da barra de musica no inferior-->
   	<div id="rodape">
