--- a/website/prototipo final completo/menu.html
+++ b/website/prototipo final completo/menu.html
@@ -14,7 +14,7 @@
   <script src="jquery.js">></script> 
 
   </head>
-  <body onload="refresh();seeTime();productsMissingToLike()">
+  <body onload="refresh();seeTime();Alert.render()">
 
   <!--para criar a barra fixa no topo-->
   	<div id="barra">
@@ -417,6 +417,15 @@
 	  	</tr>
     </table>
 
+
+    <div id="dialogoverlay"></div>
+	<div id="dialogbox">
+	  <div>
+	    <div id="dialogboxhead"></div>
+	    <div id="dialogboxbody"></div>
+	    <div id="dialogboxfoot"></div>
+	  </div>
+	</div>
   	<!--inicio da barra de musica no inferior-->
   	<div id="rodape">
   		<img id="reticencias" onclick="toggleFooter('rodape');songPlaying()" src="uparrow.png">
