--- a/website/prototipo final completo/pagamento.html
+++ b/website/prototipo final completo/pagamento.html
@@ -9,7 +9,7 @@
       <script src="javascript.js"></script> <!--importa o codigo javascript do ficheiro javascript.js-->
 
   	</head>
-  	<body onload="end()">
+  	<body onload="end(); getTotal();">
 
 
   		<div class="icones" id="pay">
@@ -22,6 +22,9 @@
   		<p id="frase1"> Aguarde pelo empregado. </p>
  		<!--<p id="frase1"> Aguarde pelo empregado.</p>-->
  		<p id="frase2"> Obrigado pela visita! Esperamos que tenha gostado. </p>
+    </div>
+      <p id="total_aPagar"></p>
+    </div>
   
 
   </body>
