--- a/website/index.html
+++ b/website/index.html
@@ -121,7 +121,7 @@
 <div id="proto" class="section">
 <h2 id ="title_3" class="section" onclick="toggleVisible('proto_inner', 'title_3')">Prot&oacute;tipos</h2>
 <div id="proto_inner" class="inner_section">
-<a href="pdf/pbf.pdf">PBF (Não disponível)</a> <br />
+<!--a href="pdf/pbf.pdf">PBF (Não disponível)</a> <br /-->
 <a href="prototipo funcional 1 beta/index.html">Primeiro prot&oacute;tipo funcional</a> <br />
 <a href="prototipo funcional 1 completo/index.html">Primeiro prot&oacute;tipo funcional completo</a> <br />
 <a href="prototipo funcional 2 beta/index.html">Segundo prot&oacute;tipo funcional</a> <br />
@@ -134,9 +134,9 @@
 <div id="au" class="section">
 <h2 id ="title_4" class="section" onclick="toggleVisible('au_inner', 'title_4')">Avalia&ccedil;&atilde;o com Utilizadores</h2>
 <div id="au_inner" class="inner_section">
-<a href="tarefas-criterios1.html">Tarefas e Crit&eacute;rios de usabilidade</a> <br />
-<a href="tarefas-criterios2.html">Tarefas e Crit&eacute;rios de usabilidade (melhorado)</a> <br />
-<a href="relatorioTestes1.html">Relat&oacute;rio da avalia&ccedil;&atilde;o com utilizadores</a> <br />
+<a href="pdf/tarefas.pdf">Tarefas e Crit&eacute;rios de usabilidade</a> <br />
+<a href="pdf/tarefasMelhorado.pdf">Tarefas e Crit&eacute;rios de usabilidade (melhorado)</a> <br />
+<a href="pdf/rau.pdf">Relat&oacute;rio da avalia&ccedil;&atilde;o com utilizadores</a> <br />
 <a href="relatorioTestes2.html">Relat&oacute;rio da avalia&ccedil;&atilde;o com utilizadores (melhorado)</a> <br />
 <a href="manual.html">Manual do Utilizador</a> <br />
 </p>
