add manual e avaliaçao com utilizadores

--- a/website/index.html
+++ b/website/index.html
@@ -137,8 +137,8 @@
 <a href="pdf/tarefas.pdf">Tarefas e Crit&eacute;rios de usabilidade</a> <br />
 <a href="pdf/tarefasMelhorado.pdf">Tarefas e Crit&eacute;rios de usabilidade (melhorado)</a> <br />
 <a href="pdf/rau.pdf">Relat&oacute;rio da avalia&ccedil;&atilde;o com utilizadores</a> <br />
-<a href="relatorioTestes2.html">Relat&oacute;rio da avalia&ccedil;&atilde;o com utilizadores (melhorado)</a> <br />
-<a href="manual.html">Manual do Utilizador</a> <br />
+<a href="pdf/rau_melhorado.pdf">Relat&oacute;rio da avalia&ccedil;&atilde;o com utilizadores (melhorado)</a> <br />
+<a href="pdf/manual.pdf">Manual do Utilizador</a> <br />
 </p>
 </div>
 </div>
